k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telecom
  labels:
    app: telecom-ossbss
    environment: dev
