k8s/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: telecom
spec:
  type: ClusterIP

  selector:
    app: billing-service

  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
