k8s/cdr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdr-service
  namespace: telecom

spec:
  type: ClusterIP

  selector:
    app: cdr-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081
