k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: telecom
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
